#29 Fix several Sonar issues